# textboard

./: .gitignore  beta.html  data.json  index.html  main.py  pyproject.toml  readme.md  record.txt  salt.txt  template.html
static/: beta.client.js  beta.style.css  christmas.css  client.js  misc.js  new.beta.client.js  style.css
